--- a/RepositoryParser/RepositoryParser/View/MainWindow.xaml
+++ b/RepositoryParser/RepositoryParser/View/MainWindow.xaml
@@ -100,7 +100,10 @@
         <DataTemplate DataType="{x:Type viewModel:AnalysisViewModel}">
             <view:AnalysisView/>
         </DataTemplate>
-        
+        <!--Settings-->
+        <DataTemplate DataType="{x:Type viewModel:SettingsViewModel}">
+            <view:SettingsView/>
+        </DataTemplate>
     </Window.Resources>
 
     <i:Interaction.Triggers>
@@ -120,8 +123,9 @@
         </Grid.ColumnDefinitions>
 
         <!--Buttons Panel: left -->
-        <StackPanel Grid.Row="1" Grid.Column="0">
-            <imageButton:ImageButton 
+        <DockPanel Grid.Row="1" Grid.Column="0" LastChildFill="False" Margin="0,0,0,20">
+            <imageButton:ImageButton
+                DockPanel.Dock="Top"
                 x:Name="DbManagementBtn"
                 Background="{StaticResource GradientMainColor}"
                 Command="{Binding OpenDataBaseManagementCommand}"
@@ -129,6 +133,7 @@
                 Text="{x:Static resw:Resources.DataBaseManagement}"/>
             
             <imageButton:ImageButton 
+                DockPanel.Dock="Top"
                 x:Name="PresentationBtn"
                 Background="{StaticResource GradientMainColor}"
                 Command="{Binding OpenPresentationCommand}"
@@ -137,6 +142,7 @@
                 IsEnabled="{Binding IsDataBaseEmpty, Converter={StaticResource NegativeBoolConventer}}"/>
                     
             <imageButton:ImageButton 
+                DockPanel.Dock="Top"
                 x:Name="FilteringBtn"
                 Background="{StaticResource GradientMainColor}"
                 Command="{Binding OpenFilteringCommand}"
@@ -145,13 +151,32 @@
                 IsEnabled="{Binding IsDataBaseEmpty, Converter={StaticResource NegativeBoolConventer}}"/>
 
             <imageButton:ImageButton 
+                DockPanel.Dock="Top"
                 x:Name="AnalysisBtn"
                 Background="{StaticResource GradientMainColor}"
                 Command="{Binding OpenAnalysisCommand}"
                 ImageSource="../Assets/Icons/Analysis_grey.png"
                 Text="{x:Static resw:Resources.AnalysisButton}"
                 IsEnabled="{Binding IsDataBaseEmpty, Converter={StaticResource NegativeBoolConventer}}"/>
-        </StackPanel>
+            
+            <imageButton:ImageButton 
+                DockPanel.Dock="Top"
+                x:Name="SettingsButton"
+                Background="{StaticResource GradientGrayColor}"
+                Command="{Binding OpenSettingsCommand}"
+                ImageSource="../Assets/Icons/PNG_DarkGray/Settings 3-100.png"
+                Text="{x:Static resw:Resources.Settings}"
+                Opacity="1"/>
+
+            <imageButton:ImageButton 
+                DockPanel.Dock="Top"
+                x:Name="About"
+                Background="{StaticResource GradientGrayColor}"
+                Command="{Binding}"
+                ImageSource="../Assets/Icons/PNG_DarkGray/About-100.png"
+                Text="{x:Static resw:Resources.About}"
+                Opacity="1"/>
+        </DockPanel>
 
         <Border 
             Grid.Row="1" 
