--- a/RepositoryParser/RepositoryParser/View/SettingsView.xaml
+++ b/RepositoryParser/RepositoryParser/View/SettingsView.xaml
@@ -5,12 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:RepositoryParser.View"
              xmlns:resw="clr-namespace:RepositoryParser.Properties"
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              DataContext="{Binding Source={StaticResource Locator}, Path=SettingsViewModel}"
              x:Name="Root">
-    <Grid Margin="5">
+    <Grid Margin="10,5">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -45,6 +50,74 @@
         </StackPanel>
         <!--UserPreferences-->
         <TextBlock Text="{x:Static resw:Resources.UserPreferences}" Grid.Row="2" FontSize="24"/>
+        <StackPanel Grid.Row="3" Margin="5">
+            <TextBlock
+                Text="Clone repository with all branches"
+                FontWeight="Light"
+                Foreground="#555555"
+                FontSize="12"
+                Margin="5"/>
+            <controls:ToggleSwitchButton 
+                HorizontalAlignment="Left"
+                Content="Clone repository with all branches"/>
+
+        </StackPanel>
+        
+        <!--Clone saving location-->
+        <TextBlock Text="Clone saving location" Grid.Row="4" FontSize="24"/>
+        <StackPanel Grid.Row="5" Margin="5">
+            <DockPanel LastChildFill="True">
+                <Button 
+                    DockPanel.Dock="Right"
+                    Content=". . ."
+                    Margin="5"
+                    Width="60"
+                    Command="{Binding OpenDirectoryFilePicker}"/>
+                <TextBox
+                    DockPanel.Dock="Left"
+                    Text="{Binding CurrentRepositorySavingPath}"
+                    IsReadOnly="True"
+                    Margin="5"
+                    />
+            </DockPanel>
+            
+            <Button
+                Margin="5"
+                Background="Transparent"
+                Command="{Binding OpenRepositoriesDirectoryCommand}"
+                BorderThickness="0"
+                BorderBrush="Transparent"
+                HorizontalAlignment="Left"
+                >
+                <TextBlock 
+                    Text="Open containing folder"
+                    FontSize="12"
+                    FontWeight="Light"
+                    TextDecorations="Underline"
+                    >
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Style.Triggers>
+                                <Trigger Property ="IsMouseOver" Value="True">
+                                    <Setter Property= "Background" Value="Transparent"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="Transparent"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
+        </StackPanel>
+
         <!--Saving path-->
+
     </Grid>
 </UserControl>
