--- a/RepositoryParser/RepositoryParser/View/MainWindow.xaml
+++ b/RepositoryParser/RepositoryParser/View/MainWindow.xaml
@@ -175,7 +175,8 @@
                 Command="{Binding}"
                 ImageSource="../Assets/Icons/PNG_DarkGray/About-100.png"
                 Text="{x:Static resw:Resources.About}"
-                Opacity="1"/>
+                Opacity="1"
+                Visibility="Hidden"/>
         </DockPanel>
 
         <Border 
